# ym-skills

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  security_best_practices_report.md
.github/workflows/: sync-to-gitee.yml
docs/: architecture.md  authoring-guide.md  release-process.md  review-checklist.md
registry/: index.yaml  owners.yaml
shared/prompts/: README.md
shared/schemas/: registry.schema.md
shared/scripts/: common.py  new_skill.py  package_skill.py  validate_repo.py
skills/cn-city-wage-social-base/: CHANGELOG.md  README.md  SKILL.md
skills/cn-city-wage-social-base/assets/: report-template.md
skills/cn-city-wage-social-base/evals/: evals.json  trigger-evals.json
skills/cn-city-wage-social-base/references/: source-priority.md
skills/cn-city-wage-social-base/scripts/: README.md
skills/example-skill/: CHANGELOG.md  README.md  SKILL.md
skills/example-skill/evals/: evals.json
templates/skill/: README.md  SKILL.md
templates/skill/evals/: evals.json
tests/smoke/: test_repo.py
